# yolact_edge_ros

./: CMakeLists.txt  LICENSE  package.xml
launch/: yolact_edge_ros.launch
scripts/: yolact_edge_intel.py  yolact_edge_ros.py
